<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#317A8A"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="25dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_screen_1st"
        android:id="@+id/text_first_screen1st"
        android:textColor="#ffffff"
        android:textSize="43dp"
        android:textIsSelectable="false"
        android:layout_marginBottom="-140dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/localisation"
        android:src="@drawable/ecranaccueil2"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="210dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/texto_intro"
        android:id="@+id/texte_intro"
        android:layout_marginTop="-180dp"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_marginBottom="55dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/edit_text_localisation"
        android:hint="@string/lieuFirstScreen"
        android:inputType="text"
        android:textStyle="italic"
        android:background="@drawable/contour_ecran_accueil"
        android:textColor="#ffffff"
        android:editable="true"
        android:padding="10dp"
        android:textSize="20dp"
        android:ellipsize="start"
        android:layout_marginBottom="15dp"
        android:textColorHint="#edeaea"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/bouton_validation"
        android:id="@+id/bouton_validation"
        android:textColor="#317A8A"
        android:background="@drawable/bouton_validation_non_appuye"
        android:textSize="25dp"
        android:clickable="true" />


</LinearLayout>